# Aerina

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  debug.yml  release.yml
apps/client/: README.md  index.html  package.json  vite.config.ts
apps/client/src/: App.vue  main.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: lib.rs  main.rs
apps/client/src/api/: index.ts
apps/client/src/components/: AgentEntryPanel.vue  ConversationSidebar.vue  MarkdownView.vue  ThinkingBlock.vue
apps/client/src/composables/: useMessageTimeline.ts
apps/client/src/layouts/: AppShell.vue
apps/client/src/lib/: htmlPreview.ts  markdown.ts
apps/client/src/locales/: en.json  zh-CN.json
apps/client/src/pages/: ChatPage.vue  HtmlPreviewPage.vue  LoginPage.vue  ProfilePage.vue  RankingPage.vue  StatsPage.vue
apps/client/src/pages/settings/: AppearancePage.vue  AssistantsPage.vue  McpPage.vue  ProfileSettingsPage.vue  ProviderDetailPage.vue  ProvidersPage.vue  SettingsHubPage.vue
apps/client/src/plugins/: i18n.ts  icons.ts  vuetify.ts
apps/client/src/router/: index.ts
apps/client/src/stores/: preferences.ts  roles.ts  stream.ts
apps/client/src/styles/: chat.css  code-theme.css
crates/aerina-analytics/: Cargo.toml
crates/aerina-analytics/src/: lib.rs
crates/aerina-app/: Cargo.toml
crates/aerina-app/src/: backup.rs  export.rs  generate.rs  lib.rs  mcp.rs  retry.rs  tree_ops.rs
crates/aerina-arena/: Cargo.toml
crates/aerina-arena/src/: lib.rs
crates/aerina-conversation/: Cargo.toml
crates/aerina-conversation/src/: lib.rs
crates/aerina-domain/: Cargo.toml
crates/aerina-domain/src/: analytics.rs  arena.rs  content.rs  conversation.rs  enums.rs  error.rs  ids.rs  lib.rs  mcp.rs  model_catalog.rs  provider.rs  ranking.rs  tree.rs
crates/aerina-generation/: Cargo.toml
crates/aerina-generation/src/: lib.rs
crates/aerina-mcp/: Cargo.toml
crates/aerina-mcp/src/: lib.rs
crates/aerina-media/: Cargo.toml
crates/aerina-media/src/: lib.rs
crates/aerina-providers/: Cargo.toml
crates/aerina-providers/examples/: live_chat.rs
crates/aerina-providers/src/: anthropic.rs  lib.rs  openai_chat.rs  openai_responses.rs
crates/aerina-ranking/: Cargo.toml
crates/aerina-ranking/src/: lib.rs
crates/aerina-secrets/: Cargo.toml
crates/aerina-secrets/src/: lib.rs
crates/aerina-storage/: Cargo.toml
crates/aerina-storage/src/: analytics.rs  backup_ops.rs  bootstrap.rs  conversations.rs  extra_ops.rs  lib.rs  mcp_ops.rs  messages.rs  providers.rs  ranking_ops.rs  rows.rs
docs/: architecture-summary.md  project-plan-v1.1.md
migrations/: 001_init.sql  002_mcp_servers.sql  003_app_settings.sql  004_profile_avatar.sql
