[workspace]
resolver = "2"
members = [
  "apps/client/src-tauri",
  "crates/aerina-domain",
  "crates/aerina-storage",
  "crates/aerina-providers",
  "crates/aerina-generation",
  "crates/aerina-conversation",
  "crates/aerina-arena",
  "crates/aerina-ranking",
  "crates/aerina-analytics",
  "crates/aerina-media",
  "crates/aerina-secrets",
  "crates/aerina-mcp",
  "crates/aerina-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Aerina"]

[workspace.dependencies]
aerina-domain = { path = "crates/aerina-domain" }
aerina-storage = { path = "crates/aerina-storage" }
aerina-providers = { path = "crates/aerina-providers" }
aerina-generation = { path = "crates/aerina-generation" }
aerina-conversation = { path = "crates/aerina-conversation" }
aerina-arena = { path = "crates/aerina-arena" }
aerina-ranking = { path = "crates/aerina-ranking" }
aerina-analytics = { path = "crates/aerina-analytics" }
aerina-media = { path = "crates/aerina-media" }
aerina-secrets = { path = "crates/aerina-secrets" }
aerina-mcp = { path = "crates/aerina-mcp" }
aerina-app = { path = "crates/aerina-app" }

anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["serde", "v7"] }
