[package]
name = "aerina-conversation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aerina-domain = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
