[package]
name = "aerina-generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aerina-domain = { workspace = true }
aerina-providers = { workspace = true }
anyhow = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
