[package]
name = "aerina-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aerina-domain = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
async-stream = "0.3"
