[package]
name = "aerina-media"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aerina-domain = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
