[package]
name = "aerina-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aerina-domain = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
