[package]
name = "aerina-client"
version.workspace = true
description = "Aerina desktop client"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "aerina_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aerina-app = { workspace = true }
aerina-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
